k8s/keda-autoscale/00-operator-subscription.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-keda
